--- a/recipes/chicken-schnitzel.html
+++ b/recipes/chicken-schnitzel.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/chicken-schnitzel.html">chicken-schnitzel</a>
+        <h1>Chicken Schnitzel</h1>
     </body>
 </html>
