--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chicken-schnitzel.html">chicken-schnitzel</a>
+        <ul>
+        <li><a href="recipes/chicken-schnitzel.html">chicken-schnitzel</a></li>
+        </ul>
     </body>
 </html>
