--- a/recipes/chicken-schnitzel.html
+++ b/recipes/chicken-schnitzel.html
@@ -6,5 +6,32 @@
     </head>
     <body>
         <h1>Chicken Schnitzel</h1>
+        <img src="schnitzel.jpeg">
+        <h2>Tasty and easy to make. Kids love it and you all will want more!</h2>
+        <p>Good Shit right here</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 large eggs</li>
+            <li>3 tablespoons honey</li>
+            <li>3 tablespoons Dijon mustard</li>
+            <li>2 ½ tablespoons soy sauce</li>
+            <li>1 tablespoon crushed garlic</li>
+            <li>3 cups bread crumbs, or as needed</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon ground black pepper</li>
+            <li>vegetable oil for frying</li>
+            <li>12 boneless chicken breast halves, pounded very thin</li>
+            <li>1 lemon, cut into wedges</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Whisk eggs, honey, Dijon mustard, soy sauce, and garlic together in a bowl. Mix bread crumbs, salt, and pepper together in a shallow bowl.</li>
+            <li>Heat 1/2 to 1 inch of vegetable oil in a heavy skillet to 350 degrees F (175 degrees C). You can also use a deep fryer.</li>
+            <li>Put chicken slices in the egg mixture and knead until fully coated. Press chicken in the bread crumbs until evenly coated.</li>
+            <li>Working in batches, carefully place chicken in the hot oil using tongs and cook until no longer pink in the center and browned on the outside,
+                 3 to 4 minutes per side. Drain on paper towels and serve with lemon wedges.</li>
+        </ol>
+
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
