more editing on newest additions meth and margarita

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
         <li><a href="recipes/chicken-schnitzel.html">chicken-schnitzel</a></li>
+        <li><a href="recipes/crystal-meth.html">crystal meth</a></li>
+        <li><a href="recipes/tommy-margarita.html">tommy Margarita</a></li>
         </ul>
     </body>
 </html>
