--- a/recipes/crystal-meth.html
+++ b/recipes/crystal-meth.html
@@ -6,18 +6,31 @@
     </head>
     <body>
         <h1>Crystal Meth</h1>
-        <img>
-        <h2>short descrip</h2>
-        <p>shorter descript</p>
+        <img src="meth.jpg">
+        <h2>A wild ride best enjoyed with a friend</h2>
+        <p>Amazing way to start the weekend</p>
 
         <h3>Ingredients</h3>
         <ul>
-            <li></li>
+            <li><strong>Acetone</strong>, from paint thinner or nail polish remover</li>
+            <li><strong>Anhydrous ammonia</strong>, found in various household cleaners</li>
+            <li><strong>Sulfuric acid or hydrochloric acid</strong>, which is typically extracted from over-the-counter drain cleaners</li>
+            <li><strong>Toluene</strong> from brake fluid</li>
+            <li><strong>Phosphorous</strong>, extracted from flares, matches, and other substances</li>
+            <li><strong>Ether or chloroform</strong></li>
+            <li><strong>Freon</strong> from air-conditioning units</li>
+            <li><strong>Energy drink </strong> of using over-the-counter medications</li>
+            <li><strong>Alcohol</strong></li>
+            <li><strong>Benzene and gasoline</strong></li>
+            <li><strong>Lithium</strong>, which is removed from car batteries</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
+            <li>Ephedrine or pseudoephedrine is combined with ammonia and lithium or iodine and phosphorus.</li>
+            <li>Mixed in with water.</li>
+            <li>A solvent like gasoline is added, and the person extracts the methamphetamine.</li>
+            <li>The mixture is heated by using the acid or some other substance (e.g., gasoline) to crystallize the product.</li>
         </ol>
 
         <a href="../index.html">Back to main page</a>
