--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="odin.png">
         <ul>
         <li><a href="recipes/chicken-schnitzel.html">chicken-schnitzel</a></li>
         <li><a href="recipes/crystal-meth.html">crystal meth</a></li>
